# island-stl

./: .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  capsule-layout.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts
.agents/: AGENTS.md  PHASE_A_COMPLETE
.agents/memory/: _phase1_inbox.md
.agents/projects/: island-stl.md
.agents/rules/: frontend.md  governance.md  printer.md  tauri.md
.github/workflows/: build.yml
icons/: icon.icns
src/: dom.ts  main.ts  settings.ts  state.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: icon.rs  lib.rs  printer.rs  screenshot.rs  settings.rs  shortcuts.rs  sysinfo.rs  types.rs  window.rs
src/modules/: brightness.ts  capsule-interaction.ts  minimize.ts  printer.ts  shortcut.ts  theme.ts  view-switcher.ts
src/styles/: island.css
