[package]
name = "dynamic-island"
version = "0.1.0"
description = "Dynamic Island for Windows"
authors = ["you"]
edition = "2021"

[lib]
name = "dynamic_island_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
png = "0.17"
base64 = "0.22"
rumqttc = "0.24"
tokio = { version = "1", features = ["full"] }
rustls = "0.22"
winreg = "0.55"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_System_SystemInformation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
] }
